--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ python:
   - "3.5"
   - "3.6"
   - "3.7"
+before_install:
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq python-bsddb3
 install:
   - pip install -e .
 script:
