--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ python:
   - "3.6"
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install -qq python-bsddb3
+  - sudo apt-get install -qq libdb4.8-dev
 install:
   - pip install -e .
 script:
